@@ -1,7 +1,8 @@
 plugins {
     // https://github.com/n0mer/gradle-git-properties ; target is: generateGitProperties
-    id "com.gorylenko.gradle-git-properties" version "2.3.1"
+    id 'com.gorylenko.gradle-git-properties' version '2.3.1'
 }
+
 sourceSets {
     main {
         resources {
@@ -11,7 +12,6 @@ sourceSets {
     }
     testannotations
 }
-
 
 sourcesJar {
     // The resources duplicate content from the src directory.
@@ -51,7 +51,7 @@ dependencies {
     // Update the next two version numbers in tandem.  Get the Error Prone version from the "compile
     // dependencies" section of https://mvnrepository.com/artifact/com.google.guava/guava/28.2-jre .
     // (It isn't at https://mvnrepository.com/artifact/org.checkerframework.annotatedlib/guava/28.2-jre, which is the bug.)
-    implementation 'com.google.errorprone:error_prone_annotations:2.7.1'
+    implementation 'com.google.errorprone:error_prone_annotations:2.8.1'
     implementation ('org.checkerframework.annotatedlib:guava:30.1.1-jre') {
         // So long as Guava only uses annotations from checker-qual, excluding it should not cause problems.
         exclude group: 'org.checkerframework'
@@ -180,6 +180,7 @@ shadowJar {
     description 'Creates checker-VERSION-all.jar and copies it to dist/checker.jar.'
     // To see what files are incorporated into the shadow jar file:
     // doFirst { println sourceSets.main.runtimeClasspath.asPath }
+
     doLast{
         copy {
             from archiveFile.get()
@@ -584,7 +585,6 @@ task ainferTestCheckerJaifTest(dependsOn: 'shadowJar', group: 'Verification') {
     outputs.upToDateWhen { false }
 }
 
-
 task ainferNullnessGenerateJaifs(type: Test) {
     description 'Internal task.  Users should run ainferNullnessJaifTest instead.  This type-checks the ainfer-nullness files with -Ainfer=jaifs to generate .jaif files'
 
@@ -629,7 +629,7 @@ task ainferNullnessGenerateJaifs(type: Test) {
         exec {
             executable "${afu}/scripts/insert-annotations-to-source"
             // Script argument -cp must precede Java program argument -i.
-            args = ['-cp', "${sourceSets.test.output.asPath}"]
+            args = ['-cp', "${sourceSets.test.output.asPath}:${project(':checker-qual').tasks.jar.archivePath}"]
             args += ['-i']
             for (File jaif : jaifs) {
                 args += [jaif.toString()]
@@ -756,8 +756,8 @@ task wpiManyTest(group: "Verification") {
                         || line.startsWith("warning: [path]")
                         // Ignore bootstrap classpath warning:
                         || line.startsWith("warning: [options] bootstrap")
-                        // Ignore warnings about illegal access:
-                        || line.contains("Option --illegal-access is deprecated")
+                        // Ignore the warnings about --add-opens arguments to the JVM
+                        || line.contains("warning: [options] --add-opens has no effect at compile time")
                         // Ignore the summary line that reports the total number of warnings (which can be single or plural).
                         || line.endsWith("warning")
                         || line.endsWith("warnings")) {
@@ -814,6 +814,7 @@ final checkerPom(publication) {
         }
     }
 }
+
 publishing {
     publications {
         checker(MavenPublication) {
@@ -825,6 +826,7 @@ publishing {
         }
     }
 }
+
 signing {
     sign publishing.publications.checker
 }
